# final-project-level3-nlp-01

./: .gitignore  KOTE_TEST_Novel.ipynb  README.md  classifying_data.ipynb  data_annotator.ipynb  diary_data.ipynb  model_ex.ipynb  mongo_db_Cloud_test.ipynb  mongo_db_docker_test.ipynb  mongo_db_docker_tutorial.ipynb  mongo_db_setup.py  pyproject.toml  requirements.txt  results.pkl  results_new_pipeline.pkl  temp.ipynb  uxui_readme.md  virtualenv.sh
app/: __main__.py
app/backend/: README.md  a.py  main.py
app/frontend/: uxui.py  (+6 more)
code/: books_find_unused_labels.ipynb  combine_song_dataset.ipynb  crawler.ipynb  find_unused_labels.ipynb  movie_dataset_maker.ipynb  movies_find_unused_labels.ipynb  play_crawler.ipynb  plays_find_unused_labels.ipynb  songs_find_unused_labels.ipynb  test-train.py  test.ipynb
data/: Lyrics_Top100_annotation_completed.csv  Lyrics_top100.csv  Lyrics_top100_21_40.csv  Lyrics_top100_41-61.csv  Lyrics_top100_labels_19_39.csv  Lyrics_top50_2012.csv  Lyrics_top50_2016.csv  Lyrics_top50_2018.csv  Lyrics_top50_2021.csv  New_Lyrics.csv  about_top40_movies.md  book_dataset_image.csv  lyrics_top100_19-39_62-79_80-100.csv  lyrics_top100_19-39_80-100.csv  play_dataset_image.csv  song_dataset_image.csv  songs_database.pkl
diary_data/: Diary_Top80.csv  diary_ellie.pickle  diary_hgb.csv  diary_kbs.pickle  diary_lyj.csv  diary_phil.pickle
install/: requirements.txt
jupyter_notebooks/: model_ex.ipynb
model/: dataset.py  fake_train.py  utils.py
src/: Lyrics_top50.csv  craw50.ipynb  crawler.ipynb  crawler.py  crawler_year.py  making_LyricsData.ipynb
(+59 files in other folders)
