[tool.poetry]
name = "streamlit-UX/UI"
version = "0.1.0"
description = "streamlit for final project"
authors = ["hummingeel <hummingeel@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
streamlit = "^1.9.2"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pandas = "1.0.0"
numpy = "^1.22.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
